--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -737,6 +737,7 @@ input{
 /* =================================================== */
 /* -----------footer start------------------- */
 .footer_main {
+    padding-top: 30px;
     margin: 60px 0;
     row-gap: 40px;
 }
